syntax = "proto3";

package pos_protobuf;

import "pos/include/proto/handle.proto";

/*!
 *  \brief  binary format of POSHandle_CUDA_Device
 */
 message Bin_POSHandle_CUDA_Device {
    Bin_POSHanlde base = 1;
}
